<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_register"
    tools:context=".activities.SignUpDPActivity">

    <TextView
        android:id="@+id/signuptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/datos_personales"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signuptitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/nombre"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/apellidos"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/apellidos"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/emailRegister"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/labelObjetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="25dp"
        android:text="@string/sexo"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Spinner "Objetivo" -->
    <Spinner
        android:id="@+id/sexoSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelObjetivo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:padding="20dp"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sexoSpinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="3dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/continuarDB"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/continuar"
            android:textSize="25sp" />

        <Button
            android:id="@+id/volverLG"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/volver"
            android:textSize="25sp" />


    </LinearLayout>


</RelativeLayout>